server/bcephal-gateway-service/deployment-gateway-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcephal-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bcephal-gateway-service
  template:
    metadata:
      labels:
        app: bcephal-gateway-service
    spec:
      volumes:
      - name: bcephal-gateway-repository
        hostPath:
          path: /opt/bcephal-gateway-repository
      containers:
      - name: bcephal-gateway-service
        image: localhost:5000/becphal-gateway-service-docker-image
        volumeMounts:
        - name: bcephal-gateway-repository
          mountPath: /opt/bcephal-gateway-repository

        ports:
        - containerPort: 9000
        
        
---
apiVersion: v1
kind: Service
metadata:
  name: bcephal-gateway-service
spec:
  selector:
    app: bcephal-gateway-service
  type: LoadBalancer
  ports:
  - name: http  
    nodePort: 32158 
    port: 9001
    targetPort: 9000
    protocol: TCP
