server/bcephal-gateway-service/deployment-gateway-service3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcephal-gateway-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bcephal-gateway-service-app
  template:
    metadata:
      labels:
        app: bcephal-gateway-service-app
    spec:
      volumes:
      - name: bcephal-gateway-repository
        hostPath:
          path: /opt/bcephal-gateway-repository
      containers:
      - name: bcephal-gateway-service-app
        image: localhost:5000/becphal-gateway-service-docker-image
        volumeMounts:
        - name: bcephal-gateway-repository
          mountPath: /opt/bcephal-gateway-repository
       
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: bcephal-gateway-service-svc
spec:
  type: LoadBalancer
  selector:
    app: bcephal-gateway-service-app
  ports:
  - port: 80
    targetPort: 9000
