server/bcephal-gateway-service/service-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bcephal-gateway-service
spec:
  selector:
    app: bcephal-gateway-service
  type: LoadBalancer  
  ports:
  - port: 8000
    targetPort: 3000
    protocol: TCP
