server/bcephal-gateway-service/deployment-ingress-gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /bcephal(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bcephal-gateway-service
                port:
                  number: 9000
